snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.sha512
26bc6e91aaa0b3bb54c2dce1589643cddd6ab0913bebe90f5585c7114687c28bd1f535dd23f342cac74e5cfecfd2d91ae7171bb8c7fdaab3264ce8f413f5c674